--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "next/core-web-vitals",
+    "prettier"
+  ],
+  
+  "rules": {
+    "import/order": [ "warn",{ "alphabetize": {"order": "asc"}}],
+    "semi": ["warn", "always"]
+  }
 }
