--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,12 @@
-{
+{ 
+  "root": true,
+  
   "extends": [
     "next/core-web-vitals",
     "prettier"
   ],
   "rules": {
     "import/order": [ "warn",{ "alphabetize": {"order": "asc"}}],
-    "semi": ["warn", "always"]
+    "semi": ["warn", "never"]
   }
 }
