--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,8 @@
-{ 
+{
   "root": true,
-  "extends": [
-    "next/core-web-vitals",
-    "prettier"
-  ],
+  "extends": ["next/core-web-vitals", "prettier"],
   "rules": {
-    "import/order": [ "warn",{ "alphabetize": {"order": "asc"}}],
+    "import/order": ["warn", { "alphabetize": { "order": "asc" } }],
     "semi": ["warn", "never"]
   }
 }
