--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.2",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "encoding": "^0.1.13",
     "eslint-config-next": "13.0.5",
     "next": "13.0.5",
     "react": "18.2.0",
