--- a/.github/workflows/scheduled_sync.yml
+++ b/.github/workflows/scheduled_sync.yml
@@ -30,7 +30,9 @@ jobs:
           
           # master ブランチの変更をマージし、clone 元の master に push
           git checkout main
-          git merge --no-edit upstream/main
-          git push origin main
+          msg=$(git merge --no-edit upstream/main)
 
-          # curl -X POST --data-urlencode "payload={\"channel\": \"#チーム開発_チーム6\", \"username\": \"webhookbot\", \"text\": \" Deployed to vercel. Check https://the-hack-2022-nov-team-6.vercel.app \"}" ${{ secrets.WEBHOOK_URL }}
+          if [ $msg != 'Already up to date.' ]; then
+            git push origin main
+            curl -X POST --data-urlencode "payload={\"channel\": \"#チーム開発_チーム6\", \"username\": \"webhookbot\", \"text\": \" Deployed to vercel. Check https://the-hack-2022-nov-team-6.vercel.app \"}" ${{ secrets.WEBHOOK_URL }}
+          fi
