--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "eslint-config-next": "13.0.5",
+    "gray-matter": "^4.0.3",
+    "marked": "^4.2.4",
     "next": "13.0.5",
+    "notion-to-md": "^2.5.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.3"
