--- a/.github/workflows/auto_sync.yml
+++ b/.github/workflows/auto_sync.yml
@@ -17,7 +17,7 @@ jobs:
 
     - name: Check differences and Run
       run: |
-        DIFF=$(git diff HEAD upstream/master)
+        DIFF=$(git diff HEAD upstream/mains)
         if [ -z "$DIFF" ]; then
           echo "No differences found."
           git push --force-with-lease
