--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react-dom": "18.0.9",
     "date-fns": "^2.29.3",
     "eslint-config-next": "13.0.5",
+    "gray-matter": "^4.0.3",
+    "marked": "^4.2.4",
     "next": "13.0.5",
     "notion-to-md": "^2.5.5",
     "react": "18.2.0",
@@ -23,6 +25,7 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.8",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
