--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "date-fns": "^2.29.3",
     "eslint-config-next": "13.0.5",
     "next": "13.0.5",
     "notion-to-md": "^2.5.5",
