--- a/.github/workflows/auto_sync.yml
+++ b/.github/workflows/auto_sync.yml
@@ -23,6 +23,7 @@ jobs:
           exit 0
         else
           echo "Differences found. Updating fork..."
+          git merge upstream/main
           git push --force-with-lease
-          # curl -X POST --data-urlencode "payload={\"channel\": \"#チーム開発_チーム6\", \"username\": \"webhookbot\", \"text\": \" Deployed to vercel. Check https://the-hack-2022-nov-team-6.vercel.app \"}" ${{ secrets.WEBHOOK_URL }}
+          curl -X POST --data-urlencode "payload={\"channel\": \"#チーム開発_チーム6\", \"username\": \"webhookbot\", \"text\": \" Deployed to vercel. Check https://the-hack-2022-nov-team-6.vercel.app \"}" ${{ secrets.WEBHOOK_URL }}
         fi
