--- a/.github/workflows/auto_sync.yml
+++ b/.github/workflows/auto_sync.yml
@@ -25,5 +25,5 @@ jobs:
           echo "Differences found. Updating fork..."
           git merge --allow-unrelated-histories --no-edit upstream/main
           git push --force-with-lease
-          curl -X POST --data-urlencode "payload={\"channel\": \"#チーム開発_チーム6\", \"username\": \"webhookbot\", \"text\": \" Deployed to vercel. Check https://the-hack-2022-nov-team-6.vercel.app \"}" ${{ secrets.WEBHOOK_URL }}
+          # curl -X POST --data-urlencode "payload={\"channel\": \"#チーム開発_チーム6\", \"username\": \"webhookbot\", \"text\": \" Deployed to vercel. Check https://the-hack-2022-nov-team-6.vercel.app \"}" ${{ secrets.WEBHOOK_URL }}
         fi
