--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "notion-to-md": "^2.5.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "typescript": "4.9.3"
   },
   "devDependencies": {
